aggiornati esercizi 7-8 e aggiunta nuovi esercizi

--- a/07-esercitazione.ipynb
+++ b/07-esercitazione.ipynb
@@ -210,10 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b70eb405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'a': 'b', 'c': 'd', 'f': 'g', 'h': 'i'}\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir({'a':'b'})\n",
     "d = {'a':'b', 'c':'d', 'f':'g', 'h':'i'}\n",
@@ -222,10 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0d94f6eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('libro', 'a', 'aldo'), ('matita', 'c', 'silvestro'), ('penna', 'f', 'florian'), ('gomma', 'h', 'claudiu')]\n",
+      "libro a aldo\n",
+      "matita c silvestro\n",
+      "penna f florian\n",
+      "gomma h claudiu\n"
+     ]
+    }
+   ],
    "source": [
     "c = {'aldo':'bushaj', 'silvestro':'frisullo', 'florian':'karici', 'claudiu':'petrea'}\n",
     "\n",
